[gd_scene load_steps=4 format=2]

[ext_resource path="res://UserInterface/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://UserInterface/But_ChangeScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/ImportCharacter.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 1 )]
margin_left = -164.0
margin_top = 0.0
margin_right = 164.0
margin_bottom = 14.0
text = "Import Character"

[node name="But_ChangeScene" parent="." instance=ExtResource( 2 )]
margin_right = 92.0
margin_bottom = 37.0
text = "Back"
next_scene_path = "res://Screens/MenuScreen.tscn"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -164.0
margin_top = -167.0
margin_right = 164.0
margin_bottom = 167.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_right = 328.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="But_OpenFile" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_right = 328.0
margin_bottom = 20.0
text = "Open Character File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="VBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 800.0
margin_bottom = 374.0
window_title = "Open a File"
mode = 0
access = 1
current_dir = "user://characterFiles"
current_path = "user://characterFiles/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="VBoxContainer2/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 38.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer2/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 48.0

[node name="Save_Button" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 328.0
margin_bottom = 44.0
text = "Save"

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/But_OpenFile" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="VBoxContainer2/VBoxContainer/FileDialog" to="." method="_on_FileDialog_file_selected"]
